2010-03-06 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigIntegerTest.cs: Tests for ModPow.

2010-03-06 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigIntegerTest.cs: Tests for Pow.

2010-03-06 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigIntegerTest.cs: Tests for DivRem.

2010-03-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigIntegerTest.cs: Tests for Mul.

2010-03-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigIntegerTest.cs: Tests for coersion operators
	for short.

2010-03-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigIntegerTest.cs: Tests for << >>.

2010-03-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigIntegerTest.cs: Tests for | & ^ ~.

2010-03-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigIntegerTest.cs: Tests for ++, --.

2010-03-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigIntegerTest.cs: Tests for Abs.

2010-03-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigIntegerTest.cs: Tests for Min, Max.

2010-03-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigIntegerTest.cs: Tests for Negate.

2010-03-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigIntegerTest.cs: Tests for Sub.

2010-03-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigIntegerTest.cs: Tests for long CompareTo.

2010-03-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigIntegerTest.cs: Tests for IComparable.

2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigIntegerTest.cs: Tests for ulong relational ops with switched
	arguments.

2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigIntegerTest.cs: Tests for ulong Compare and relational ops.

2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigIntegerTest.cs: Tests for Compare and relational ops.

2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>

	*BigIntegerTest.cs: Tests for Add.

2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>

	*BigIntegerTest.cs: Tests for Equals.

2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>

	*BigIntegerTest.cs: Tests for long constructor and coersion operator.
